<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Lightning Browser</string>
    <string name="add_group">Add Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="app_details">App Details</string>
    <string name="apps_hidden">- Hidden</string>

    <string name="bookmarks_title">Bookmarks</string>
    <string name="tabs_title_active">Active Tabs</string>
    <string name="tabs_title_suspended">Inactive Tabs</string>
    <string name="tabs_info_active">Active tabs can play and record audio in the background.</string>
    <string name="tabs_info_active_disable"><u>Disable</u></string>
    <string name="tabs_info_suspended_change"><u>Allow tabs to stay active in the background</u></string>


    <!--  Tooltips  -->
    <string name="tip_kill_process">Stop Website Fully</string>
    <string name="tip_launch_out">Launch in Own Window Once</string>

    <string name="tip_info_website">About Adding Websites</string>git

    <string name="tip_stop_editing">Turn Off Edit Mode</string>
    <string name="tip_select_all">Select/Deselect All Visible Apps</string>

    <string name="tip_uninstall">Uninstall / Remove</string>
    <string name="tip_uninstall_bulk">Uninstall / Remove All Selected</string>
    <string name="tip_info">Android App Info</string>
    <string name="tip_change_icon">Change Icon</string>

    <string name="tip_save_settings">Backup All Settings &amp; Groupings</string>
    <string name="tip_load_settings">Restore All Settings &amp; Groupings</string>

    <string name="tip_hide">Hide this App</string>
    <string name="tip_show">Un-Hide this App</string>

    <!--  Toasts  -->
    <string name="moved_hidden">Moved to</string>
    <string name="moved_hidden_bold">Hidden Group</string>
    <string name="moved_shown">Moved to</string>
    <string name="refreshed_icon">Refreshing icon…</string>

    <!--  Web Presets  -->
    <string name="preset_google" translatable="false">google.com</string>
    <string name="preset_youtube" translatable="false">youtube.com</string>
    <string name="preset_discord" translatable="false">discord.com/app</string>
    <string name="preset_spotify" translatable="false">open.spotify.com</string>
    <string name="preset_tidal" translatable="false">listen.tidal.com</string>
    <string name="preset_apkmirror" translatable="false">apkmirror.com</string>
    <string name="preset_apkpure" translatable="false">apkpure.com</string>

    <string name="notification_title_n">Lightning Browser: No Websites Running</string>
    <string name="notification_title_s">Lightning Browser: Running a Website</string>
    <string name="notification_title_p">Lightning Browser: Running %1$d Websites</string>
    <string name="notification_content">This notification keeps your websites\' background audio running smoothly.</string>

    <!-- Addons -->
    <string name="addons_install">Install</string>
    <string name="addons_update">Update</string>
    <string name="addons_activate">Activate</string>
    <string name="addons_uninstall">Remove</string>

    <!--  Browser Tooltips  -->
    <string name="web_back">Navigate Back</string>
    <string name="web_forward">Navigate Forward</string>
    <string name="web_reload">Refresh this Page</string>
    <string name="web_exit">Minimize Tab</string>
    <string name="web_hide_bar">Hide Top Bar</string>
    <string name="web_add_bookmark">Add Page to Bookmarks</string>
    <string name="web_remove_bookmark">Remove Bookmark</string>
    <string name="web_cancel">Cancel</string>
    <string name="web_confirm">Confirm &amp; Go</string>
    <string name="web_close">Close</string>

    <!-- Browser -->
    <string name="web_download_started">Downloading</string>
    <string name="web_download_finished">Finished downloading</string>

    <string name="web_apk_prompt_title">APK File Downloaded</string>
    <string name="web_apk_prompt_message_pre">Finished downloading %1$s</string>
    <string name="web_apk_prompt_message">Would you like to install it, or save it to your downloads folder?\n
    \nNote that this file was downloaded from the internet, and may be harmful!</string>
    <string name="web_apk_prompt_install">Install</string>
    <string name="web_apk_prompt_move">Save</string>
    <string name="web_apk_prompt_delete">Delete</string>
    <string name="extension_prompt_title">Manage Web Extensions</string>
    <string name="extension_prompt_hint">Get Extensions from Firefox Addons</string>

    <string name="web_search">Search or Enter URL</string>

    <!-- Misc. -->
    <string name="warning">Important Info</string>
    <string name="cancel">Cancel</string>
    <string name="understood">Got It!</string>
    <string name="confirm">Confirm</string>
    <string name="next">Continue</string>

    <!-- Gecko -->
    <string name="before_unload_message">This page is asking you to confirm that you want to leave - data you have entered may not be saved</string>
    <string name="before_unload_title">Are you sure?</string>
    <string name="before_unload_leave_page">Leave Page</string>
    <string name="before_unload_stay">Stay on Page</string>

    <string name="repost_confirm_message">To display this page, GeckoViewExample must send information that will repeat any action (such as a search or order confirmation) that was performed earlier.</string>
    <string name="repost_confirm_title">Are you sure?</string>
    <string name="repost_confirm_resend">Resend</string>
    <string name="repost_confirm_cancel">Cancel</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="clear_field">Clear</string>

    <string name="wait">Wait</string>
    <string name="stop">Stop</string>


    <!--  Updater  -->
    <string name="update_title">An update is available!</string>
    <string name="update_content">You can update from version %1$s to %2$s, all in this app.</string>
    <string name="update_button">Continue</string>
    <string name="update_skip_button">Skip this Update</string>
    <string name="update_skip_toast">Skipped version</string>

    <string name="update_downloading_title">Downloading Latest Version of %s</string>
    <string name="update_downloading_content">You should get a prompt to install shortly.\n
    \nIf you accidentally dismissed it, didn\'t give permission, or got an error,
    you can try again from settings.</string>
    <string name="update_hide_button">Hide</string>

    <string name="update_failed_title">Failed to download package!</string>
    <string name="update_failed_content">Make sure you have a good internet connection and try again later.</string>

    <string name="update_skip_title">Skip updating to version %1$s?</string>
    <string name="update_skip_content">You will not be notified about this update again.\n
        \nKeep in mind that updates are highly recommended and may include important fixes.\n
        \nIf you are avoiding this update because it causes issues, report your issues at github.com/threethan/Lightning Launcher\n
        \nYOU CAN UPDATE LATER FROM THE SETTINGS!</string>
    <string name="update_skip_confirm_button">I Understand, Skip It</string>
    <string name="update_skip_cancel_button">Just Dismiss</string>

    <string name="web_rename">Rename</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_revoke">Revoke</string>
    <string name="permission_manage">Manage Permissions</string>
    <string name="permission_request_message"><b>%1$s</b> is requesting access to your <b>%2$s</b></string>
    <string name="permission_camera">📷&#160;Camera</string>
    <string name="permission_microphone">🎙️&#160;Microphone</string>
    <string name="permission_location_coarse">📍&#160;General&#160;Location</string>
    <string name="permission_location_fine">📍&#160;Precise&#160;Location</string>
    <string name="permission_manage_message"><b>%1$s</b> has access to your <b>%2$s</b></string>
</resources>