<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bkg_dialog"
    android:orientation="vertical"
    android:padding="20dp">

    <View
        android:layout_width="300dp"
        android:layout_height="0dp" />

    <TextView
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_apk_prompt_title" />

    <TextView
        android:id="@+id/downloadMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="text"
        android:backgroundTint="@android:color/white"
        android:ellipsize="end"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/web_apk_prompt_message_pre"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:layout_marginBottom="10dp"
        android:autofillHints="text"
        android:backgroundTint="@android:color/white"
        android:text="@string/web_apk_prompt_message"
        android:textColor="@android:color/white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <FrameLayout
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/bkg_button">

            <TextView
                style="@style/SettingButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/web_apk_prompt_delete" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_weight="1"
            android:background="@drawable/bkg_button">

            <TextView
                style="@style/SettingButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/web_apk_prompt_move" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/install"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1.5"
            android:background="@drawable/bkg_button">

            <TextView
                style="@style/SettingButtonLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/addons_install" />

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
